test/errhandling/parallel/sync-around-bad-throws-call.good
sync-around-bad-throws-call.chpl:6: In function 'badFn':
sync-around-bad-throws-call.chpl:8: error: call to throwing function throwingFn without throws, try, or try! (relaxed mode)
sync-around-bad-throws-call.chpl:5: note: throwing function throwingFn defined here
